assets/css/style.css
html {
    height: 100%;
}

body {
    background-image: url("../images/minecraft_office_background_by_goldenfurryofficial-d8hk3k7.png");
    background-repeat: no-repeat;
    background-color: black;
    background-size: 100%;
    width: 100%;
    height: 100%;
}

#title {
    background-color: deepskyblue;
    color: white;
    opacity: 0.9;
}

h1 {
    background-color: deepskyblue;
    color: white;
    opacity: 1;
    font-weight: bold;
}

#instructions {
    background-color: mediumseagreen;
    color: whitesmoke;
    opacity: .8;
    display:block;
}

#btnWrap {
    text-align: center;
    background-color: mediumseagreen;
    opacity: .8;
}

#instructionButton:hover {
    border-style: solid;
    background-color: darkgreen;
    color: rgb(233, 255, 233);
    border-color: rgb(233, 255, 233);
}

#instructionButton:focus {
    outline:0;
}

#instructionButton {
    background-color: rgb(233, 255, 233);
    color: darkgreen;
    border-style: solid;
    border-color: darkgreen;
    border-width: 2px;
    text-align: center;
    vertical-align: middle;
    
}

#winLose {
    background-color: rgb(168, 122, 70);
    color: rgb(77, 57, 31);
    font-weight: bold;
    opacity: .8;
    text-align: center;
}

#lossTotal {
    text-align: center;
    font-size: 22px;
    opacity: 1;
    line-height: 22px;
}

#winTotal {
    text-align: center;
    margin: 15px 0px 20px 0px;
    font-size: 22px;
    opacity: 1;
    line-height: 22px;
}
#rGn {
    background-color: rgb(77, 57, 31);
    color: rgb(168, 122, 70);
    text-align: center;
    font-weight: bold;
    opacity: .8;
}

#orderedWeight {
    font-size: 40px;
    opacity: 1;
    margin: 0px 0px 0px 0px;
    line-height: 40px;
}

#orderedWeightText {
    font-size: 20px;
    opacity: 1;
    margin: 10px 0px 0px 0px;
}

#playerTotalText {
    background-color: rgb(255, 123, 0);
    color: rgb(238, 255, 0);
    text-align: center;
    font-weight: bold;
    opacity: .8;
}

#playerTotalNum {
    background-color: rgb(255, 123, 0);
    color: rgb(238, 255, 0);
    text-align: center;
    font-weight: bold;
    opacity: .8;
}

#playerWeight {
    font-size: 40px;
    background-color: rgb(255, 123, 0);
    color: rgb(238, 255, 0);
    text-align: center;
    font-weight: bold;
    margin: 0px 0px 0px 0px;
    line-height: 40px;
    opacity: 1;
}

#playerWeightText {
    margin: 10px 0px 0px 0px;
    font-size: 20px;
    opacity: 1;
}

#crystalImages {
    text-align: center;
    margin: 40px 0px 0px 0px;
}

.crystal {
    margin: 0px 20px 40px 20px;
}

#animate {
    text-align: center;
}

#animateText {
    text-align: center;
    background-color: rgba(255, 255, 255, 0);
    color: whitesmoke;
    font-weight: bold;
    font-size:60px;
}

@media screen and (max-width: 1900px) {
    #animateText {
        font-size:60px;
    }
}

@media screen and (max-width: 1400px) {
    #animateText {
        font-size:60px;
    }
}

@media screen and (max-width: 1275px) {
#animateText {
    font-size:60px;
    }
}

@media screen and (max-width: 1075px) {
    body {
        background-image: url("../images/backgroundRotate.png");
        background-repeat: no-repeat;
        background-color: black;
    } 

    #col9 {
        vertical-align: middle;
    }

    #animateText {
        
        font-size:40px;
        margin: 0px 0px 0px 0px;
        line-height: 60px;
        }

    #anTextPosition {
        
        font-size:40px;
        margin: 0px 0px 0px 0px;
        line-height: 60px;

    }
    
}

@media screen and (max-width: 900px) {
    body {
        background-image: url("../images/backgroundRotate.png");
        background-repeat: no-repeat;
        background-color: black;
    }

    #animateText {
        font-size:40px;
        vertical-align: middle;
        line-height: 47px;
        }

}

@media screen and (max-width: 875px) {
body {
    background-image: url("../images/backgroundRotate.png");
    background-repeat: no-repeat;
    background-color: black;;
}

#col9 {
    vertical-align: middle;
}

#animateText {
    
    font-size:30px;
    margin: 0px 0px 0px 0px;
    line-height: 90px;
    }

#anTextPosition {
    
    font-size:30px;
    margin: 0px 0px 0px 0px;
    line-height: 90px;

}

}

@media screen and (max-width: 715px) {

    #animateText {
    
        font-size:20px;
        margin: 0px 0px 0px 0px;
        line-height: 90px;
        }
    
    #anTextPosition {
        
        font-size:20px;
        margin: 0px 0px 0px 0px;
        line-height: 90px;
    
    }


}
@media screen and (max-width: 690px) {
    body {
        background-image: url("../images/backgroundRotate.png");
        background-repeat: no-repeat;
        background-color: black;
    }
    }

@media screen and (max-width: 600px) {

    body {
        background-image: url("../images/backgroundRotate.png");
        background-repeat: repeat;
        background-color: black;
    
    }

    .crystal {
        margin: 20px 5px 20px 5px;
        height: 125px;
    
    }

    #crystalImages {
        text-align: center;
        margin: 0px 0px 0px 0px;
    }
    
    }

    @media screen and (max-width: 580px) {

        body {
            background-image: url("../images/backgroundRotate.png");
            background-repeat: repeat;
            background-color: black;
        
        }
    
        .crystal {
            margin: 20px 5px 20px 5px;
            height: 125px;
        
        }

        #playerWeightText {
            margin: 10px 0px 0px 0px;
        }

        #orderedWeightText {
            margin: 10px 0px 0px 0px;
        }

        #orderedWeight {
            
            margin: 0px 0px 15px 0px;
            
        }

        #playerWeight {
            
            margin: 0px 0px 15px 0px;
            
        }
    }

